--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.0",
     "http-errors": "^1.8.0",
+    "http-status-codes": "^2.1.4",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
