--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.12.0",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
+    "json-cyclic": "^1.0.2",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
