--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,17 @@
     "private": true,
     "proxy": "http://localhost:3001",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-regular-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "font-awesome": "^4.7.0",
         "history": "^4.10.1",
+        "i": "^0.3.7",
+        "npm": "^8.3.0",
         "query-string": "^4.3.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
