--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "react-scripts": "4.0.3",
         "react-uuid": "^1.0.2",
         "socket.io-client": "^4.4.0",
+        "swr": "^1.1.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
