--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "query-string": "^4.3.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-paginate": "^8.1.0",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-uuid": "^1.0.2",
